fix: align with navi

--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -15,10 +15,11 @@
 
 .hero_container {
   display: flex;
-  width: 80%;
+  width: 1280px;
   height: 754px;
   justify-content: center;
   align-items: center;
+  gap: 80px
 }
 
 .background_font_group {
@@ -26,7 +27,7 @@
   height: 1088px;
   position: absolute;
   left: -32px;
-  bottom: -216px;
+  bottom: -160px;
 }
 
 .left_hero {
@@ -34,24 +35,23 @@
   width: 50%;
   padding: 152px 0px;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   gap: 10px;
   flex: 1 0 0;
   align-self: stretch;
   z-index: 2;
 }
 
-.left_titles {
+.left_title {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: flex-start;
 }
 
 .left_hero_content {
   width: 528px;
   height: 128px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .left_hero_buttons {
